--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
     <h1>This is h1 statement</h1>
         Hello there, awesome person!
     <img src="https://avatars.githubusercontent.com/u/96015289?v=4">
+    <ul>
+      <li>www.w3schools.com</li>
+      <li>www.codeninja.com</li>
+      <li>www.stackpverflow.com</li>
+      <li>www.glassdoor.com</li>
+    </ul>
   </body>
 </html>
