--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
         Hello there, awesome person!
     <img src="https://avatars.githubusercontent.com/u/96015289?v=4">
     <ul>
-      <li>www.w3schools.com</li>
-      <li>www.codeninja.com</li>
-      <li>www.stackpverflow.com</li>
-      <li>www.glassdoor.com</li>
+      <li><a href="https://github.com">This is a link to GitHub!</a></li>
+      <li><a href="https://www.codingninjas.com">This is a link to Coding Ninjas!</a></li>
+      <li><a href="https://stackoverflow.com">This is a link to stack overflow</a></li>
     </ul>
   </body>
 </html>
